--- a/timelooped/export_presets.cfg
+++ b/timelooped/export_presets.cfg
@@ -1,7 +1,7 @@
 [preset.0]
 
-name="iOS"
-platform="iOS"
+name="macOS"
+platform="macOS"
 runnable=true
 advanced_options=false
 dedicated_server=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="build/again 2 electric boogaloo.dmg"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -20,47 +20,84 @@ script_export_mode=2
 
 [preset.0.options]
 
+export/distribution_type=1
+binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
-architectures/arm64=true
-application/app_store_team_id=""
-application/export_method_debug=1
-application/code_sign_identity_debug=""
-application/code_sign_identity_release=""
-application/provisioning_profile_specifier_debug=""
-application/provisioning_profile_specifier_release=""
-application/export_method_release=0
-application/targeted_device_family=2
-application/bundle_identifier=""
+debug/export_console_wrapper=0
+application/icon=""
+application/icon_interpolation=4
+application/bundle_identifier="com.game.game"
 application/signature=""
+application/app_category="Games"
 application/short_version=""
 application/version=""
-application/min_ios_version="14.0"
+application/copyright=""
+application/copyright_localized={}
+application/min_macos_version_x86_64="10.12"
+application/min_macos_version_arm64="11.00"
+application/export_angle=0
+display/high_res=true
 application/additional_plist_content=""
-application/icon_interpolation=4
-application/export_project_only=false
-application/delete_old_export_files_unconditionally=false
-entitlements/increased_memory_limit=false
-entitlements/game_center=false
-entitlements/push_notifications="Disabled"
-entitlements/additional=""
-capabilities/access_wifi=false
-capabilities/performance_gaming_tier=false
-capabilities/performance_a12=false
-capabilities/additional=PackedStringArray()
-user_data/accessible_from_files_app=false
-user_data/accessible_from_itunes_sharing=false
-privacy/camera_usage_description=""
-privacy/camera_usage_description_localized={}
+xcode/platform_build="14C18"
+xcode/sdk_version="13.1"
+xcode/sdk_build="22C55"
+xcode/sdk_name="macosx13.1"
+xcode/xcode_version="1420"
+xcode/xcode_build="14C18"
+codesign/codesign=0
+codesign/installer_identity=""
+codesign/apple_team_id=""
+codesign/identity=""
+codesign/entitlements/custom_file=""
+codesign/entitlements/allow_jit_code_execution=false
+codesign/entitlements/allow_unsigned_executable_memory=false
+codesign/entitlements/allow_dyld_environment_variables=false
+codesign/entitlements/disable_library_validation=false
+codesign/entitlements/audio_input=false
+codesign/entitlements/camera=false
+codesign/entitlements/location=false
+codesign/entitlements/address_book=false
+codesign/entitlements/calendars=false
+codesign/entitlements/photos_library=false
+codesign/entitlements/apple_events=false
+codesign/entitlements/debugging=false
+codesign/entitlements/app_sandbox/enabled=false
+codesign/entitlements/app_sandbox/network_server=false
+codesign/entitlements/app_sandbox/network_client=false
+codesign/entitlements/app_sandbox/device_usb=false
+codesign/entitlements/app_sandbox/device_bluetooth=false
+codesign/entitlements/app_sandbox/files_downloads=0
+codesign/entitlements/app_sandbox/files_pictures=0
+codesign/entitlements/app_sandbox/files_music=0
+codesign/entitlements/app_sandbox/files_movies=0
+codesign/entitlements/app_sandbox/files_user_selected=0
+codesign/entitlements/app_sandbox/helper_executables=[]
+codesign/entitlements/additional=""
+codesign/custom_options=PackedStringArray()
+notarization/notarization=0
 privacy/microphone_usage_description=""
 privacy/microphone_usage_description_localized={}
-privacy/photolibrary_usage_description=""
-privacy/photolibrary_usage_description_localized={}
-privacy/file_timestamp_access_reasons=3
-privacy/system_boot_time_access_reasons=1
-privacy/disk_space_access_reasons=3
-privacy/active_keyboard_access_reasons=0
-privacy/user_defaults_access_reasons=0
+privacy/camera_usage_description=""
+privacy/camera_usage_description_localized={}
+privacy/location_usage_description=""
+privacy/location_usage_description_localized={}
+privacy/address_book_usage_description=""
+privacy/address_book_usage_description_localized={}
+privacy/calendar_usage_description=""
+privacy/calendar_usage_description_localized={}
+privacy/photos_library_usage_description=""
+privacy/photos_library_usage_description_localized={}
+privacy/desktop_folder_usage_description=""
+privacy/desktop_folder_usage_description_localized={}
+privacy/documents_folder_usage_description=""
+privacy/documents_folder_usage_description_localized={}
+privacy/downloads_folder_usage_description=""
+privacy/downloads_folder_usage_description_localized={}
+privacy/network_volumes_usage_description=""
+privacy/network_volumes_usage_description_localized={}
+privacy/removable_volumes_usage_description=""
+privacy/removable_volumes_usage_description_localized={}
 privacy/tracking_enabled=false
 privacy/tracking_domains=PackedStringArray()
 privacy/collected_data/name/collected=false
@@ -203,170 +240,14 @@ privacy/collected_data/other_data_types/collected=false
 privacy/collected_data/other_data_types/linked_to_user=false
 privacy/collected_data/other_data_types/used_for_tracking=false
 privacy/collected_data/other_data_types/collection_purposes=0
-icons/icon_1024x1024=""
-icons/icon_1024x1024_dark=""
-icons/icon_1024x1024_tinted=""
-icons/settings_58x58=""
-icons/settings_58x58_dark=""
-icons/settings_58x58_tinted=""
-icons/settings_87x87=""
-icons/settings_87x87_dark=""
-icons/settings_87x87_tinted=""
-icons/notification_40x40=""
-icons/notification_40x40_dark=""
-icons/notification_40x40_tinted=""
-icons/notification_60x60=""
-icons/notification_60x60_dark=""
-icons/notification_60x60_tinted=""
-icons/notification_76x76=""
-icons/notification_76x76_dark=""
-icons/notification_76x76_tinted=""
-icons/notification_114x114=""
-icons/notification_114x114_dark=""
-icons/notification_114x114_tinted=""
-icons/spotlight_80x80=""
-icons/spotlight_80x80_dark=""
-icons/spotlight_80x80_tinted=""
-icons/spotlight_120x120=""
-icons/spotlight_120x120_dark=""
-icons/spotlight_120x120_tinted=""
-icons/iphone_120x120=""
-icons/iphone_120x120_dark=""
-icons/iphone_120x120_tinted=""
-icons/iphone_180x180=""
-icons/iphone_180x180_dark=""
-icons/iphone_180x180_tinted=""
-icons/ipad_167x167=""
-icons/ipad_167x167_dark=""
-icons/ipad_167x167_tinted=""
-icons/ipad_152x152=""
-icons/ipad_152x152_dark=""
-icons/ipad_152x152_tinted=""
-icons/ios_128x128=""
-icons/ios_128x128_dark=""
-icons/ios_128x128_tinted=""
-icons/ios_192x192=""
-icons/ios_192x192_dark=""
-icons/ios_192x192_tinted=""
-icons/ios_136x136=""
-icons/ios_136x136_dark=""
-icons/ios_136x136_tinted=""
-icons/app_store_1024x1024=""
-icons/app_store_1024x1024_dark=""
-icons/app_store_1024x1024_tinted=""
-storyboard/image_scale_mode=0
-storyboard/custom_image@2x=""
-storyboard/custom_image@3x=""
-storyboard/use_custom_bg_color=false
-storyboard/custom_bg_color=Color(0, 0, 0, 1)
-
-[preset.1]
-
-name="Windows Desktop"
-platform="Windows Desktop"
-runnable=true
-advanced_options=false
-dedicated_server=false
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path=""
-patches=PackedStringArray()
-encryption_include_filters=""
-encryption_exclude_filters=""
-seed=0
-encrypt_pck=false
-encrypt_directory=false
-script_export_mode=2
-
-[preset.1.options]
-
-custom_template/debug=""
-custom_template/release=""
-debug/export_console_wrapper=1
-binary_format/embed_pck=false
-texture_format/s3tc_bptc=true
-texture_format/etc2_astc=false
-binary_format/architecture="x86_64"
-codesign/enable=false
-codesign/timestamp=true
-codesign/timestamp_server_url=""
-codesign/digest_algorithm=1
-codesign/description=""
-codesign/custom_options=PackedStringArray()
-application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
-application/icon_interpolation=4
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
-application/trademarks=""
-application/export_angle=0
-application/export_d3d12=0
-application/d3d12_agility_sdk_multiarch=true
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
 ssh_remote_deploy/extra_args_ssh=""
 ssh_remote_deploy/extra_args_scp=""
-ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
-$action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
-$trigger = New-ScheduledTaskTrigger -Once -At 00:00
-$settings = New-ScheduledTaskSettingsSet -AllowStartIfOnBatteries -DontStopIfGoingOnBatteries
-$task = New-ScheduledTask -Action $action -Trigger $trigger -Settings $settings
-Register-ScheduledTask godot_remote_debug -InputObject $task -Force:$true
-Start-ScheduledTask -TaskName godot_remote_debug
-while (Get-ScheduledTask -TaskName godot_remote_debug | ? State -eq running) { Start-Sleep -Milliseconds 100 }
-Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue"
-ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
-Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
-Remove-Item -Recurse -Force '{temp_dir}'"
-
-[preset.2]
-
-name="Web"
-platform="Web"
-runnable=true
-advanced_options=false
-dedicated_server=false
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="experimentalexport/again 2 electric boogaloo.html"
-patches=PackedStringArray()
-encryption_include_filters=""
-encryption_exclude_filters=""
-seed=0
-encrypt_pck=false
-encrypt_directory=false
-script_export_mode=2
-
-[preset.2.options]
-
-custom_template/debug=""
-custom_template/release=""
-variant/extensions_support=false
-variant/thread_support=false
-vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
-html/export_icon=true
-html/custom_html_shell=""
-html/head_include=""
-html/canvas_resize_policy=2
-html/focus_canvas_on_start=true
-html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
-progressive_web_app/ensure_cross_origin_isolation_headers=true
-progressive_web_app/offline_page=""
-progressive_web_app/display=1
-progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+ssh_remote_deploy/run_script="#!/usr/bin/env bash
+unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
+open \"{temp_dir}/{exe_name}.app\" --args {cmd_args}"
+ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
+kill $(pgrep -x -f \"{temp_dir}/{exe_name}.app/Contents/MacOS/{exe_name} {cmd_args}\")
+rm -rf \"{temp_dir}\""
