--- a/timelooped/export_presets.cfg
+++ b/timelooped/export_presets.cfg
@@ -271,7 +271,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="export/again 2 electric boogaloo.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -284,8 +284,8 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
-binary_format/embed_pck=false
+debug/export_console_wrapper=2
+binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
